// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the VideoTutorial component matches the snapshot 1`] = `
<div
  className="yoast-video-tutorial__container jQNxnx"
>
  <div
    className="yoast-video-tutorial__video-container cREMxp"
  >
    <div
      className="dGyeLW"
    >
      <iframe
        allowFullScreen={true}
        frameBorder={0}
        height={315}
        src="https://www.youtube.com/embed/bIgcj_pPIbw"
        title="Video title"
        width={560}
      />
    </div>
  </div>
  <div
    className="yoast-video-tutorial__descriptions cRkqDB"
  >
    <div
      className="yoast-video-tutorial__description bLNsnd"
    >
      <p
        className="iCVzGO"
      >
        Need some help?
      </p>
      <p>
        Go Premium!
      </p>
      <a
        className="dlmsvD"
        href="#1"
        rel="noopener noreferrer"
        target="_blank"
      >
        Get Yoast SEO Premium now »
        <span
          className="fcHEfD"
        >
          (Opens in a new browser tab)
        </span>
      </a>
    </div>
    <div
      className="yoast-video-tutorial__description bLNsnd"
    >
      <p
        className="iCVzGO"
      >
        Need some help?
      </p>
      <p>
        Go Premium!
      </p>
      <a
        className="dlmsvD"
        href="#2"
        rel="noopener noreferrer"
        target="_blank"
      >
        Get Yoast SEO Premium now »
        <span
          className="fcHEfD"
        >
          (Opens in a new browser tab)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`the VideoTutorial component without paragraphs matches the snapshot 1`] = `
<div
  className="yoast-video-tutorial__container jQNxnx"
>
  <div
    className="yoast-video-tutorial__video-container fScRjH"
  >
    <div
      className="dGyeLW"
    >
      <iframe
        allowFullScreen={true}
        frameBorder={0}
        height={315}
        src="https://www.youtube.com/embed/bIgcj_pPIbw"
        title="Video title"
        width={560}
      />
    </div>
  </div>
</div>
`;
